used max-width instead of width for description div

--- a/monkful/templates/htmldoc.html
+++ b/monkful/templates/htmldoc.html
@@ -84,7 +84,7 @@
             }
 
             .description {
-                width: 800px;
+                max-width: 800px;
             }
 
             .fields p {
